# advent-of-code-2022

./: .gitignore  CMakeLists.txt  helper.cpp  helper.h  main.cpp
days/: aoc1.cpp  aoc1.h  aoc10.cpp  aoc10.h  aoc11.cpp  aoc11.h  aoc12.cpp  aoc12.h  aoc13.cpp  aoc13.h  aoc14.cpp  aoc14.h  aoc15.cpp  aoc15.h  aoc2.cpp  aoc2.h  aoc2b.cpp  aoc2b.h  aoc3.cpp  aoc3.h  aoc4.cpp  aoc4.h  aoc5.cpp  aoc5.h  aoc6.cpp  aoc6.h  aoc7.cpp  aoc7.h  aoc8.cpp  aoc8.h  aoc9.cpp  aoc9.h
input/: aoc13_test1.txt
