cmake_minimum_required(VERSION 3.24)
project(advent_of_code_2022)

set(CMAKE_CXX_STANDARD 17)

add_executable(advent_of_code_2022 days/aoc1.cpp helper.h helper.cpp main.cpp days/aoc1.h days/aoc2.cpp days/aoc2.h days/aoc2b.cpp days/aoc2b.h days/aoc3.cpp days/aoc3.h days/aoc4.cpp days/aoc4.h days/aoc5.cpp days/aoc5.h days/aoc6.cpp days/aoc6.h days/aoc7.cpp days/aoc7.h days/aoc8.cpp days/aoc8.h days/aoc9.cpp days/aoc9.h)
